--- a/layouts/partials/base-foot.html
+++ b/layouts/partials/base-foot.html
@@ -1,3 +1,5 @@
+<div id="snipcart" data-api-key="MDNhN2UyNDQtYzg3My00M2Q3LTk4MTgtMWVkZWZmOWE2NzA4NjM3MjYyNTI1MjQ0OTA3MjEw" hidden></div>
+<script src="https://cdn.snipcart.com/themes/v3.0.14/default/snipcart.js"></script>
 <script src='{{ "js/rad-animations.js" | absURL }}'></script>
 <script src='{{ "js/library/lozad.min.js" | absURL }}'></script>
 <script>
