--- a/layouts/partials/head_custom.html
+++ b/layouts/partials/head_custom.html
@@ -1,2 +1,4 @@
 <link rel="stylesheet" href="https://cdn.snipcart.com/themes/v3.0.14/default/snipcart.css" />
-<title> Get into a UK Law School Today! </title>
+<head> 
+	<title> Get into a top UK School Today! </title>
+</head>
