--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -20,7 +20,7 @@
 </script>
 <!-- End Google Tag Manager -->
 <!-- endinject -->
-<title>{{Guide to Enter UK Law Schools}}</title>
+<title>{{ .Site.Data.homepage.head.title }}</title>
 <style>
     /* Fade In animation triggering after font load or 3s timeout */
     .rad-fade-in {
