--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -20,7 +20,7 @@
 </script>
 <!-- End Google Tag Manager -->
 <!-- endinject -->
-<title>{{ .Site.Data.homepage.head.title }}</title>
+<title> Get into Law School Today! </title>
 <style>
     /* Fade In animation triggering after font load or 3s timeout */
     .rad-fade-in {
